# The-Fat-Controller

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  askama.toml  build.rs
Remote/Frameworks/Starscream.framework/: Info.plist  Starscream
Remote/Remote/: AppDelegate.swift  Haptic.swift  Info.plist  LookView.swift  MoveView.swift  SceneDelegate.swift  ViewController.swift
Remote/Remote.xcodeproj/: project.pbxproj
Remote/Remote/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
Remote/Remote/Constants/: Colors.swift  Command.swift  CommandCode.swift  Flags.swift  Key.swift  MouseButton.swift
Remote/Remote/Controllers/: BasicViewController.swift  ConfigureTapViewController.swift  NumberPadViewController.swift  SettingsViewController.swift  SlideViewController.swift  TabBarController.swift  TapViewController.swift  TrackpadViewController.swift  VideoViewController.swift
Remote/Remote/Emitters/: VolumeEmitter.swift
Remote/Remote/Inputs/: ButtonInput.swift  LookView.swift  MoveView.swift  NewButtonInput.swift  SimpleVolumeInput.swift  TapInput.swift  TrackpadInput.swift  VolumeInput.swift
Remote/Remote/Utilities/: Haptic.swift  SocketManager.swift  StorageKeys.swift
client/: package-lock.json  package.json  webpack.config.js
client/public/: click.html  controller.html  number.html  press.html  slide.html  trackpad.html  wasd.html
client/src/css/: controller.css
docs/: todo.md
docs/devlog/: 2021-01-22.md  2021-01-24.md  2021-01-26.md  2021-01-27.md  2021-01-28.md  2021-01-29.md  2021-01-30.md  2021-01-31.md  2021-02-01.md  2021-02-02.md  2021-02-03.md  2021-02-04.md  2021-02-05.md  2021-02-06.md  2021-02-08.md  2021-02-09.md  2021-02-10.md  2021-02-11.md  2021-02-12.md  2021-02-13.md  2021-02-14.md  2021-02-15.md  2021-02-16.md  2021-02-17.md  2021-02-18.md  2021-02-19.md  2021-02-20.md  2021-02-21.md  2021-02-22.md  2021-02-23.md  2021-02-24.md  2021-02-25.md  2021-02-26.md  2021-02-27.md  2021-02-28.md
docs/progress/: 2021-01-23.md  2021-01-24.md  2021-01-25.md  2021-01-28.md  2021-01-29.md  2021-02-01.md  2021-02-03.md  2021-02-04.md  2021-02-05.md  2021-02-07.md
examples/: ascii.rs  rotate-mouse.rs
generate/: Cargo.toml
generate/src/: main.rs
generator/: Cargo.toml
generator/src/: commands.rs  keys.rs  main.rs  mouse_buttons.rs
iOS_client/Remote/: AppDelegate.swift  Info.plist  SceneDelegate.swift
iOS_client/Remote.xcodeproj/: project.pbxproj
iOS_client/Remote/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
iOS_client/Remote/Constants/: Command.swift  CommandCode.swift  CommandData.swift  CommandStruct.swift  Config.swift  Enum.swift  Key.swift  MouseButton.swift  StorageKeys.swift
iOS_client/Remote/Controllers/: BasicVC.swift  BasicViewController.swift  CommandVC.swift  ConfigureTapVC.swift  ConfigureTapViewController.swift  ControllersVC.swift  ControllersViewController.swift  EditCommandVC.swift  NavigationController.swift  NewConfigureTapVC.swift  NumberPadVC.swift  NumberPadViewController.swift  PickerVC.swift  ScannerVC.swift  SettingsVC.swift  SettingsViewController.swift  SlideVC.swift  TabBarController.swift  TapVC.swift  TrackpadVC.swift  TrackpadViewController.swift  VideoVC.swift
iOS_client/Remote/Inputs/: ButtonInput.swift  LabelButtonInput.swift  MultilineTextInputCell.swift  NewButtonInput.swift  NumberInput.swift  NumberInputCell.swift  TapInput.swift  TextInput.swift  TextInputCell.swift  TrackpadInput.swift
iOS_client/Remote/Utilities/: Connection.swift  SocketManager.swift  Storage.swift  StorageKeys.swift
interpreter/: Cargo.toml
interpreter/src/: main.rs  parser.rs
server/: Cargo.toml  README.md
server/src/: main.rs  socket.rs
src/: ascii_key.rs  byte_command.rs  command.rs  command_code.rs  enigo_command.rs  enum.rs  enumeration.rs  error.rs  filters.rs  generic_error.rs  info.rs  info_context.rs  key.rs  key_context.rs  keyboard_context.rs  lib.rs  main.rs  mouse.rs  mouse_button.rs  mouse_context.rs  socket_command.rs  unicode_keyboard_context.rs
src/command/: execute.rs  from_bytes.rs  mod.rs  to_bytes.rs
src/handlers/: click.rs  mod.rs  socket.rs
src/iokit/: io_graphicstypes.rs  io_hidlib.rs  io_hidshared.rs  io_keymap.rs  io_kitlib.rs  io_llevent.rs  io_return.rs  io_types.rs  mach.rs  mach_init.rs  mod.rs
src/linux/: error.rs  mod.rs  mouse.rs
src/linux/kernel/: errno.rs  input_event_codes.rs  ioctl.rs  string.rs  uinput.rs
src/linux/os/: fcntl.rs  input_event_codes.rs  mod.rs  uinput.rs  unistd.rs
src/linux_common/: key_code.rs  mod.rs  scroll.rs
src/linux_common/ffi/: input_event_codes.rs
src/linux_common/os/: input_event_codes.rs  mod.rs
src/linux_wayland/: error.rs  key.rs  keyboard.rs  mod.rs  mouse.rs
src/linux_wayland/ffi/: errno.rs  fcntl.rs  input.rs  input_event_codes.rs  ioctl.rs  mod.rs  string.rs  uinput.rs  unistd.rs
src/linux_wayland/os/: input_event_codes.rs
src/linux_x11/: error.rs  info.rs  key.rs  keyboard.rs  mod.rs  mouse.rs  screen.rs  unicode_keyboard.rs
src/linux_x11/ffi/: mod.rs  xkb.rs  xlib.rs  xtest.rs
src/linux_x11/os/: mod.rs  xkb.rs  xkbcommon.rs  xlib.rs  xtest.rs
src/macos/: command.rs  command_code_enum.rs  error.rs  flags_enum.rs  info.rs  key.rs  key_enum.rs  keyboard.rs  mod.rs  mouse.rs  mouse_button_enum.rs  screen.rs
src/macos/ffi/: carbon.rs  carbon_events.rs  carbon_textinputsources.rs  carbon_unicodeutilities.rs  cfbase.rs  cfdata.rs  io_framebuffershared.rs  io_graphicstypes.rs  io_hidlib.rs  io_kitlib.rs  io_llevent.rs  io_return.rs  io_types.rs  mach.rs  mactypes.rs  mod.rs
src/macos/iokit/: io_graphicstypes.rs  io_hidshared.rs  io_keymap.rs  io_kitlib.rs  io_llevent.rs  io_types.rs  mod.rs
src/macos/os/: io_graphicstypes.rs  io_hidlib.rs  (+1 more)
src/macos2/: key.rs  mod.rs  mouse.rs  mouse_button_enum.rs
src/traits/: ascii_keyboard_context.rs  fallible_context.rs  info_context.rs  keyboard_context.rs  mod.rs  mouse_context.rs  screen_context.rs  unicode_keyboard_context.rs
src/utils/: mod.rs  non_zero.rs
src/windows/: error.rs  info.rs  key.rs  keyboard.rs  mod.rs  mouse.rs  screen.rs  unicode_keyboard.rs
(+63 files in other folders)
