[package]
name = "tfc-interpreter"
version = "0.1.0"
authors = ["Kerndog73 <kerndog73@gmail.com>"]
edition = "2018"
repository = "https://github.com/Kerndog73/The-Fat-Controller"
homepage = "https://github.com/Kerndog73/The-Fat-Controller"
license-file = "../LICENSE"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfc = { version = "0.1", path = "../" }
