[package]
name = "tfc-interpreter"
version = "0.1.0"
authors = ["Kerndog73 <kerndog73@gmail.com>"]
edition = "2018"
repository = "https://github.com/Kerndog73/The-Fat-Controller"
homepage = "https://github.com/Kerndog73/The-Fat-Controller"
license = "MIT OR Apache-2.0"

[dependencies]
tfc = { version = "0.5", path = "../" }
