[package]
name = "tfc-server"
description = "A server that facilitates remote control using the TFC library. Repo contains an iOS app."
keywords = ["keyboard", "mouse", "remote", "control"]
version = "0.5.0"
authors = ["Kerndog73 <kerndog73@gmail.com>"]
edition = "2018"
repository = "https://github.com/Kerndog73/The-Fat-Controller"
homepage = "https://github.com/Kerndog73/The-Fat-Controller"
readme = "README.md"
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-tungstenite = "0"
futures = "0.3"
tfc = { version = "0.5", features = ["ascii-fallback", "tokio"], path = "../" }

[profile.release]
lto = true
